[package]

name = "libaio"
version = "0.0.2"
authors = ["Jeremy Fitzhardinge <jeremy@goop.org>"]
description = "Binding to Linux's async block IO syscalls and libaio"
readme = "README.md"
license = "MIT"

[dependencies]
eventfd = { git = "https://github.com/knutin/eventfd-rust.git" }
libc = "*"
chrono = "0.3.0"
aligned_alloc = "*"
futures = "0.1"
slab = "0.3.0"

[dependencies.nix]
#git = "https://github.com/nix-rust/nix.git"
features = [ "eventfd" ]
version = "0.8.0"

[dev-dependencies]
tempdir = "*"
