[package]
name = "libaio"
version = "0.0.3"
authors = ["Jeremy Fitzhardinge <jeremy@goop.org>"]
description = "Binding to Linux's async block IO syscalls and libaio"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
eventfd = { git = "https://github.com/dialtone/eventfd-rust.git", rev="42938a2c05bd" }
nix = "0.14"
libc = "*"
chrono = "0.3.0"
aligned_alloc = "*"
futures = "0.1.11"
bytes = "0.4.1"

[dev-dependencies]
tempdir = "*"
